# MMVJ

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  common.rs  config.rs  driver.rs  interpolation.rs  joystick.rs  main.rs  mapping.rs  midi.rs  mmvj_cfg.yaml  mmvj_config_predefines.yaml  mouse.rs  schemas.rs
conf/: mmvj_cfg.yaml  mmvj_cfg_SHARED.yaml  mmvj_cfg_WITH_COMMENTS.yaml  mmvj_cfg_predefines.yaml
examples/: example_cfg.yaml
src/: common.rs  config.rs  control_types_macro.rs  driver.rs  interpolation.rs  joystick.rs  lib.rs  mapping.rs  midi.rs  mouse.rs  overlay.rs  schemas.rs
