[package]
name = "mmvj"
version = "3.0.0"
edition = "2021"
authors = ["Leonid Satanovskiy"]
description = "Advanced Mouse and MIDI to Virtual Joystick Mapper"


[lib]
name = "mmvj_lib"
path = "src/lib.rs"

[[bin]]
name = "mmvj"
path = "src/bin/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# MIDI support
midir = "0.10"

# Linux input/output (evdev)
evdev = { version = "0.13.2", features = ["tokio"] }
regex = "1.10"

# System utilities
nix = { version = "0.27", features = ["user", "poll"] }
yaml-merge-keys = { version = "0.8.2", features = ["serde_yaml"] }
num-traits = "0.2.19"
tokio-util = "0.7.17"
atomic_float = "1.1.0"
strum_macros = "0.27.2"
serde_regex = "1.1.0"
strum = "0.27.2"
doc_for = "0.1.4"
serde_valid = "2.0.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = false
debuginfo = 2

[profile.samply]
inherits = "release"
debug = true
