[package]
name = "mmvj"
version = "3.14.0"
edition = "2021"
authors = ["Leonid Satanovskiy"]
description = "Advanced Mouse and MIDI to Virtual Joystick (Transforming) Mapper"

[lib]
name = "mmvj_lib"
path = "src/lib.rs"

[[bin]]
name = "mmvj"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
midir = "0.10"
evdev = { version = "0.13.2", features = ["tokio"] }
regex = "1.10"
nix = { version = "0.27", features = ["user", "poll"] }
yaml-merge-keys = { version = "0.8.2", features = ["serde_yaml"] }
num-traits = "0.2.19"
tokio-util = "0.7.17"
atomic_float = "1.1.0"
strum_macros = "0.27.2"
serde_regex = "1.1.0"
strum = "0.27.2"
doc_for = "0.1.4"
serde_valid = "2.0.0"
notify-debouncer-full = "0.6.0"
colored = "3.0.0"
eframe = "0.33.3"
winit = "0.30.12"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.samply]
inherits = "release"
debug = true

[package.metadata.appimage]
# This will automatically find and bundle shared libraries.
auto_link = true

# Except for the below, that can break compatibility.
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libgcc_s.so*",
    "libm.so*",
    "librt.so*",
    "ld-linux-x86-64.so*"
]
